# generativ_ai

./: .gitignore  README.md
backend/src/fastapi/: .env.example  README.md  config.py  database.py  main.py  pyproject.toml  requirements.txt
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js
frontend/src/components/: AddProductDialog.jsx  CartButton.jsx  DeleteProductDialog.jsx  EditProductDialog.jsx  PersistentCartWidget.jsx  ProductDetailsDialog.jsx  ProductList.jsx  ShoppingCart.jsx  ShoppingCartSimple.jsx  Toast.jsx
