[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-exercices"
version = "0.1.0"
description = "Extensible FastAPI exercices with database connection"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "black",
    "isort",
    "flake8",
]

[project.scripts]
dev = "uvicorn main:app --reload"
start = "uvicorn main:app --host 0.0.0.0 --port 8000"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "httpx>=0.24.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]
